force-app/main/default/objects/refedge__Attendee__c/refedge__Attendee__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <displayFormat>AT - {000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>