force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Company__c.field-meta.xml
<CustomField>
    <fullName>refedge__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>