force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>