force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Phone__c.field-meta.xml
<CustomField>
    <fullName>refedge__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>