force-app/main/default/objects/refedge__Attendee__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Email__c</columns>
    <columns>refedge__Opportunity__c</columns>
    <columns>refedge__Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>